--- a/backend/composer.json
+++ b/backend/composer.json
@@ -9,7 +9,8 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "symfony/validator": "^6.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -21,6 +22,7 @@
     },
     "autoload": {
         "psr-4": {
+            "Core\\": "src/",
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
