--- a/backend/.env.example
+++ b/backend/.env.example
@@ -52,4 +52,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 GOREST_API_URL=https://gorest.co.in/public/v2/
 GOREST_API_HEADER_AUTH=
+GOREST_API_PREFIX=teste_inicie
 
