--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
         build: .
         container_name: blog
         #entrypoint: dockerize -wait tcp://db:3306 -timeout 40s ./docker/entrypoint.sh
+        entrypoint: ./docker/entrypoint.sh
         ports: 
             - "3000:3000"
         volumes:
@@ -16,19 +17,19 @@ services:
         # depends_on:
         #     - db
 
-    # nginx:
-    #     build: docker/nginx
-    #     container_name: nginx
-    #     restart: always
-    #     tty: true
-    #     ports:
-    #         - "8000:80"
-    #     volumes:
-    #         - .:/var/www
-    #     networks:
-    #         - blog-network
-    #     depends_on:
-    #         - app
+    nginx:
+        build: docker/nginx
+        container_name: nginx
+        restart: always
+        tty: true
+        ports:
+            - "8000:80"
+        volumes:
+            - .:/var/www
+        networks:
+            - blog-network
+        depends_on:
+            - blog
 
     # db:
     #     build: ./docker/mysql
